added respective files for classes

--- a/GUI/menuLayout.kv
+++ b/GUI/menuLayout.kv
@@ -6,14 +6,15 @@
 
 
 <MenuLayout>:
+    buttons: [overBtn, exitBtn, writeBtn, readBtn, readBtn, contactBtn]
+    oBtn: overBtn
+    extBtn: exitBtn
+    wBtn: writeBtn
+    rBtn: readBtn
+    cBtn: contactBtn
     BoxLayout:
         orientation: "horizontal"
         spacing: 10
-        extBtn: exitBtn
-        ovBtn: overBtn
-        wBtn: writeBtn
-        rBtn: readBtn
-        cBtn: contactBtn
 
         GridLayout:
             size_hint: [.3, 1]
