--- a/GUI/overviewLayout.kv
+++ b/GUI/overviewLayout.kv
@@ -1,9 +1,11 @@
 #:kivy 1.7.2
 
 <OverviewLayout>:
+    mn: men
     BoxLayout:
         orientation: "horizontal"
         MenuLayout:
+            id: men
             size_hint: [0.2,1]
         Label:
             text: "Place for a list of emails"
