--- a/GUI/writelayout.kv
+++ b/GUI/writelayout.kv
@@ -1,8 +1,10 @@
 #:kivy 1.7.2
 
 <WriteLayout>:
+    mn: men
     BoxLayout:
         MenuLayout:
+            id: men
             size_hint: [0.2,1]
         BoxLayout:
             orientation: "vertical"
