--- a/GUI/readlayout.kv
+++ b/GUI/readlayout.kv
@@ -1,9 +1,11 @@
 #:kivy 1.7.2
 
 <ReadLayout>:
+    mn: men
     BoxLayout:
         orientation: "horizontal"
         MenuLayout:
+            id: men
             size_hint: [0.2,1]
         BoxLayout:
             orientation: "vertical"
