screens can be switched again menu works next step: keyboard navigation

--- a/src/GUI/menuLayout.kv
+++ b/src/GUI/menuLayout.kv
@@ -22,19 +22,19 @@
             Button:
                 id: overBtn
                 text: "Overview"
-                on_press: root.parent.parent.manager.current = "overview"
+                on_press: root.parent.screen_manager.current = "Overview"
             Button:
                 id: readBtn
                 text: "Read"
-                on_press: root.parent.parent.manager.current = "read"
+                on_press: root.parent.screen_manager.current = "Read"
             Button:
                 id: writeBtn
                 text: "Write"
-                on_press: root.parent.parent.manager.current = "write"
+                on_press: root.parent.screen_manager.current = "Write"
             Button:
                 id: contactBtn
                 text: "Contacts"
-                on_press: root.parent.parent.manager.current = "address"
+                on_press: root.parent.screen_manager.current = "Address"
             Button:
                 id: exitBtn
                 text: "Exit"
