--- a/src/GUI/addressLayout.kv
+++ b/src/GUI/addressLayout.kv
@@ -1,8 +1,37 @@
 #:kivy 1.7.2
 
+<ContactEntry@BoxLayout>:
+    Button:
+        text: "Write Email"
+    Button:
+        text: "Delete"
+    Label:
+        text: "Name"
+    Label:
+        text: "E-Mail"
+
 <AddressLayout>:
     buttons: []
-    BoxLayout:
-        orientation: "horizontal"
+    GridLayout:
+        cols: 1
         Label:
-            text: "Place for a list of addresses"
+            text: "Addresses"
+        BoxLayout:
+            orientation: "horizontal"
+            Button:
+                text: "Previous Page"
+            Button:
+                text: "Add Contact"
+            Button:
+                text: "Next Page"
+        ContactEntry:
+        ContactEntry:
+        ContactEntry:
+        ContactEntry:
+        ContactEntry:
+        ContactEntry:
+        ContactEntry:
+        ContactEntry:
+        ContactEntry:
+        ContactEntry:
+        ContactEntry:
