First steps to change the email & contact display to ListViews.

--- a/src/GUI/overviewLayout.kv
+++ b/src/GUI/overviewLayout.kv
@@ -24,13 +24,6 @@
                 text: "Previous Page"
             Button:
                 text: "Next Page"
-        EmailEntry:
-        EmailEntry:
-        EmailEntry:
-        EmailEntry:
-        EmailEntry:
-        EmailEntry:
-        EmailEntry:
-        EmailEntry:
-        EmailEntry:
-        EmailEntry:
+        ListView:
+            size_hint: .8, .8
+            item_strings: [str(index) for index in range(100)]
