--- a/src/GUI/overviewLayout.kv
+++ b/src/GUI/overviewLayout.kv
@@ -1,4 +1,6 @@
 #:kivy 1.8
+#:import la kivy.adapters.listadapter
+#:import lbl kivy.uix.label
 
 <EmailEntry@BoxLayout>:
     Button:
@@ -12,18 +14,39 @@
     Label:
         text: "Subject"
 
-<OverviewLayout>:
+<OverviewLayout@Screen>:
+    list_view: list_view
     GridLayout:
         cols: 1
         spacing: 5
         Label:
+            id: label
+            size_hint: [1, 0.2]
+            color: (0,0,0,1)
+            disabled_color: (0,0,0,1)
+            bold: True
+            font_size: 40
             text: "Overview"
         BoxLayout:
+            id: ext_navigation
+            size_hint: [1, 0.2]
+            orientation: "horizontal"
+            Button:
+                text: "Not Read"
+            Button:
+                text: "All"
+            Button:
+                text: "Sent"
+        BoxLayout:
+            id: int_navigation
+            size_hint: [1, 0.2]
             orientation: "horizontal"
             Button:
                 text: "Previous Page"
             Button:
                 text: "Next Page"
+        #this list view does not work properly yet
         ListView:
+            id: list_view
             size_hint: .8, .8
-            item_strings: [str(index) for index in range(100)]
+            adapter: la.ListAdapter(data=[], cls=lbl.Label)
