--- a/src/GUI/addressLayout.kv
+++ b/src/GUI/addressLayout.kv
@@ -14,7 +14,13 @@
     GridLayout:
         cols: 1
         Label:
-            text: "Addresses"
+            id: label
+            size_hint: [1, 0.2]
+            color: (0,0,0,1)
+            disabled_color: (0,0,0,1)
+            bold: True
+            font_size: 40
+            text: "Address book"
         BoxLayout:
             orientation: "horizontal"
             Button:
@@ -23,14 +29,3 @@
                 text: "Add Contact"
             Button:
                 text: "Next Page"
-        ContactEntry:
-        ContactEntry:
-        ContactEntry:
-        ContactEntry:
-        ContactEntry:
-        ContactEntry:
-        ContactEntry:
-        ContactEntry:
-        ContactEntry:
-        ContactEntry:
-        ContactEntry:
