--- a/src/GUI/writelayout.kv
+++ b/src/GUI/writelayout.kv
@@ -1,8 +1,16 @@
 #:kivy 1.7.2
 
 <WriteLayout>:
-    buttons: []
     BoxLayout:
+        orientation: "vertical"
+        Label:
+            id: label
+            size_hint: [1, 0.2]
+            color: (0,0,0,1)
+            disabled_color: (0,0,0,1)
+            bold: True
+            font_size: 40
+            text: "Write"
         BoxLayout:
             orientation: "vertical"
 
