oops, typo led to syntax error

--- a/src/GUI/menuLayout.kv
+++ b/src/GUI/menuLayout.kv
@@ -29,7 +29,7 @@
                 id: contactBtn
                 background_normal: "Icons/app_addressbook.png"
                 on_release: root.parent.show_layout("Address")
-            Button:s
+            Button:
                 id: exitBtn
                 background_normal: "Icons/app_exit.png"
                 background_down: "Icons/app_exit_down.png"
