--- a/src/GUI/menuLayout.kv
+++ b/src/GUI/menuLayout.kv
@@ -11,6 +11,7 @@
         orientation: "horizontal"
         spacing: 10
 
+        #change file paths so they are OS-independent
         GridLayout:
             cols: 1
             Button:
