listview will not be further used, kivy developers themselves don't like it changing to a custom widget to display the data

--- a/src/GUI/CustomListViewItem.kv
+++ b/src/GUI/CustomListViewItem.kv
@@ -1,8 +1,17 @@
 #:kivy 1.8
 
-
 <CustomListViewItem>:
-    size_hint: [1, None]
-    height: "50dp"
+    size_hint: [1, 0.1]
     Label:
-        text: root.text
+        text: root.sender
+    Label:
+        text: root.subject
+    Button:
+        text: "Delete"
+        on_release: root.trigger_delete
+    Button:
+        text: "Read"
+        on_release: root.trigger_read
+    Button:
+        text: "Reply"
+        on_release: root.trigger_reply
