--- a/src/GUI/overviewLayout.kv
+++ b/src/GUI/overviewLayout.kv
@@ -1,6 +1,6 @@
 #:kivy 1.8
 #:import la kivy.adapters.listadapter
-#:import ok CustomListViewItem
+#:import ok GUI.CustomListViewItem
 #:import label kivy.uix.label
 
 <Label>
@@ -8,7 +8,6 @@
     disabled_color: (0,0,0,1)
 
 <OverviewLayout>:
-    grid: grid
     GridLayout:
         cols: 1
         spacing: 5
