added contactItems and a routine which adds those to the addressLayout

--- a/src/GUI/ContactItem.kv
+++ b/src/GUI/ContactItem.kv
@@ -2,9 +2,11 @@
 
 <Label>
     color: (0,0,0,1)
+    color_disables: (0,0,0,1)
 
 <ContactItem>:
     orientation: "horizontal"
+    root: root
     size_hint: [1, 0.1]
     Label:
         text: root.name
