little detail for the first startup

--- a/src/GUI/firstStart.kv
+++ b/src/GUI/firstStart.kv
@@ -4,7 +4,7 @@
     BoxLayout:
         orientation: "vertical"
         Label:
-            text: "Program started for the first time"
+            text: "Choose your provider:"
         GridLayout:
             cols: 3
             Button:
