Contacts can be added now unfortunately the addresslayout does not refresh yet

--- a/src/GUI/addressLayout.kv
+++ b/src/GUI/addressLayout.kv
@@ -12,6 +12,7 @@
 
 <AddressLayout>:
     grid: grid
+    add: False
     GridLayout:
         cols: 1
         Label:
@@ -29,6 +30,7 @@
                 text: "Previous Page"
             Button:
                 text: "Add Contact"
+                on_press: root.addNewContact()
             Button:
                 text: "Next Page"
         GridLayout:
