--- a/src/GUI/deletePopup.kv
+++ b/src/GUI/deletePopup.kv
@@ -13,4 +13,4 @@
             on_press: root.dismiss()
         Button:
             text: 'Yes'
-            on_press: root.parent.deleteMail
+            on_press: root.dismiss()
