hard changed all labels, descriptions and whatnot to german

--- a/src/GUI/ContactItem.kv
+++ b/src/GUI/ContactItem.kv
@@ -15,8 +15,8 @@
     Label:
         text: root.subject
     Button:
-        text: "Write Mail"
+        text: "Anschreiben"
         on_press: root.trigger_write_mail()
     Button:
-        text: "Delete"
+        text: "Löschen"
         on_press: root.trigger_delete()
