--- a/src/GUI/EmailItem.kv
+++ b/src/GUI/EmailItem.kv
@@ -15,14 +15,14 @@
     Label:
         text: root.subject
     Button:
-        text: "Read"
+        text: "Lesen"
         size_hint: [0.3, 1]
         on_press: root.trigger_read()
     Button:
-        text: "Reply"
+        text: "Antworten"
         size_hint: [0.3, 1]
         on_press: root.trigger_reply()
     Button:
-        text: "Delete"
+        text: "Löschen"
         size_hint: [0.3, 1]
         on_press: root.trigger_delete()
