--- a/src/GUI/firstStart.kv
+++ b/src/GUI/firstStart.kv
@@ -4,7 +4,7 @@
     BoxLayout:
         orientation: "vertical"
         Label:
-            text: "Choose your provider:"
+            text: "Bitte wählen Sie den von Ihnen genutzten E-Mail Anbieter:"
         GridLayout:
             cols: 3
             Button:
@@ -19,5 +19,5 @@
 
 
         Button:
-            text: "Close"
+            text: "Abbrechen"
             on_press: exit()
