--- a/src/GUI/readlayout.kv
+++ b/src/GUI/readlayout.kv
@@ -10,17 +10,15 @@
             disabled_color: (0,0,0,1)
             bold: True
             font_size: 40
-            text: "Read"
+            text: "Lesen"
         BoxLayout:
             orientation: "vertical"
             GridLayout:
                 size_hint: [1, 0.1]
                 rows: 1
                 Button:
-                    text: "Previous"
+                    text: "Vorherige E-Mail"
                 Button:
-                    text: "Save"
-                Button:
-                    text: "Next"
+                    text: "Nächste E-Mail"
             Label:
-                text: "Output"
+                text: "Ausgabe"
