--- a/src/GUI/writelayout.kv
+++ b/src/GUI/writelayout.kv
@@ -43,5 +43,5 @@
                     on_press: root.send_mail()
             Label:
                 size_hint: [0.2, 0.1]
-                text: "anhänge:"
+                text: "Anhänge:"
 
