next & previous email button in readLayout work now quite slow though, because fuck performance

--- a/src/GUI/readlayout.kv
+++ b/src/GUI/readlayout.kv
@@ -33,6 +33,7 @@
                 text: "subject"
             ScrollView:
                 id: scrlv
+                scroll_type: ['bars']
                 TextInput:
                     id: textOutput
                     text: "text"
