--- a/src/GUI/EmailItem.kv
+++ b/src/GUI/EmailItem.kv
@@ -7,7 +7,7 @@
     orientation: "horizontal"
     root: root
     #sizehint does not work
-    size_hint: [1, None]
+    size_hint: [1, 0.1]
     Label:
         text: root.name
     Label:
