--- a/src/GUI/menuLayout.kv
+++ b/src/GUI/menuLayout.kv
@@ -16,22 +16,26 @@
             cols: 1
             Button:
                 id: overBtn
-                background_normal: "GUI/Icons/app_overview.png"
+                background_normal: "GUI/Icons/iOverview.png"
                 on_release: root.parent.show_layout("Overview")
             Button:
                 id: readBtn
-                background_normal: "GUI/Icons/app_read.png"
+                background_normal: "GUI/Icons/iRead.png"
                 on_release: root.parent.show_layout("Read")
             Button:
                 id: writeBtn
-                background_normal: "GUI/Icons/app_write.png"
+                background_normal: "GUI/Icons/iWrite.png"
                 on_release: root.parent.show_layout("Write")
             Button:
                 id: contactBtn
-                background_normal: "GUI/Icons/app_addressbook.png"
+                background_normal: "GUI/Icons/iContacts.png"
                 on_release: root.parent.show_layout("Address")
             Button:
+                id: resetBtn
+                text: "Reset"
+                on_release: root.parent.triggerReset()
+            Button:
                 id: exitBtn
-                background_normal: "GUI/Icons/app_exit.png"
+                background_normal: "GUI/Icons/iCancel.png"
                 background_down: "GUI/Icons/app_exit_down.png"
                 on_release: root.parent.on_exit_press()
