--- a/src/GUI/writelayout.kv
+++ b/src/GUI/writelayout.kv
@@ -36,12 +36,12 @@
             GridLayout:
                 size_hint: [1, 0.1]
                 rows: 1
-                Button:
-                    text: "Anhänge"
+                #Button:
+                #    text: "Anhänge"
                 Button:
                     text: "Senden"
                     on_press: root.send_mail()
-            Label:
-                size_hint: [0.2, 0.1]
-                text: "Anhänge:"
+            #Label:
+            #    size_hint: [0.2, 0.1]
+            #    text: "Anhänge:"
 
