--- a/src/GUI/addressLayout.kv
+++ b/src/GUI/addressLayout.kv
@@ -27,13 +27,16 @@
             orientation: "horizontal"
             size_hint: [1, 0.1]
             Button:
-                text: "Vorherige Seite"
+                text: ""
+                background_normal: "GUI/Icons/iPrevious.png"
                 on_press: root.previousPage()
             Button:
-                text: "Kontakt hinzufügen"
+                text: ""
+                background_normal: "GUI/Icons/iAdd.png"
                 on_press: root.addNewContact()
             Button:
-                text: "Nächste Seite"
+                text: ""
+                background_normal: "GUI/Icons/iNext.png"
                 on_press: root.nextPage()
         GridLayout:
             id: grid
