--- a/src/GUI/overviewLayout.kv
+++ b/src/GUI/overviewLayout.kv
@@ -28,17 +28,19 @@
             Button:
                 text: "Gesendet"
                 on_press: root.switch_to("Sent")
-        BoxLayout:
-            id: int_navigation
-            size_hint: [1, 0.1]
-            orientation: "horizontal"
-            Button:
-                text: "Vorherige Seite"
-                on_press: root.previous_page()
-            Button:
-                text: "Nächste Seite"
-                on_press: root.next_page()
         GridLayout:
             id: grid
             cols: 1
             size_hint: [1, 0.7]
+        BoxLayout:
+            id: int_navigation
+            size_hint: [1, 0.1]
+            orientation: "horizontal"
+            AnchorLayout:
+                alignment: center
+                Button:
+                    text: "Vorherige Seite"
+                    on_press: root.previous_page()
+            Button:
+                text: "Nächste Seite"
+                on_press: root.next_page()
