--- a/src/GUI/deletePopup.kv
+++ b/src/GUI/deletePopup.kv
@@ -13,4 +13,5 @@
             on_press: root.dismiss()
         Button:
             text: 'Ja'
+            on_press: root.deleteMail()
             on_press: root.dismiss()
